34_put_together/grade.txt
Grading at Sat Jul 27 19:21:00 UTC 2019
Attempting to compile:
rm -f  outname.o  counts.o  main.o  kv.o count_values *~
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 outname.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 counts.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 main.c
main.c: In function ‘countFile’:
main.c:13:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return EXIT_FAILURE;
            ^
cc1: all warnings being treated as errors
Makefile:10: recipe for target 'main.o' failed
make: *** [main.o] Error 1
The code did not compile! Please try git add . to push all files in your working directory 

Overall Grade: F
